<?xml version="1.0" encoding="utf-8"?>

<resources>
    
    <!-- Facebook built-in strings -->
    <string name="app_name">Memory Booster</string>
    <string name="facebook_app_name">Memory Booster</string>
    <string name="app_id">1629232117365386</string>
    
    <string name="fb_cancelled">Cancelled</string>
    <string name="fb_ok">OK</string>
    
    <string name="fb_permission_not_granted">Unable to perform selected action 
        because permissions were not granted.</string>
    <!-- Facebook built-in strings -->
    
    <!-- Application Main Menu strings -->
    <string name="guest">Guest</string>
    
    <string name="google_signin">Sign In with Google</string>
    
    <string name="view_tutorial">View Tutorial</string>
    <string name="play_game">Play Game</string>
    <string name="view_highscores">View Highscores</string>
    <string name="settings">Settings</string>
    <!-- Application Main Menu strings -->
    
    <!-- Dialog strings -->
    <string name="fb_friends">Facebook Friends</string>
    <string name="gen_dataset">\'General\' Question Bank</string>
    <!-- Dialog strings -->
    
    <!-- Game mode strings -->
    <string name="select_game_mode">Select a game mode!</string>
    <string name="timed_challenge">Timed Challenge</string>
    <string name="campaign_mode">Campaign Mode</string>
    <string name="ff_mode">Fast &amp; Furious</string>
    <string name="start_game">Start Game</string>
    <string name="empty"></string>
    <!-- Game mode strings -->
    
    <!-- Game Instruction strings -->
    <string name="timed_challenge_inst">
        You have 15 seconds to get as many questions correct as possible!\n\n
        How will you fare? Try now!</string>
    <string name="prev_highscore">Previous Highscore:</string>
    <string name="campaign_mode_inst">How will you fare? Try now!</string>
    <!-- Game Instruction strings -->
    
    <!-- Game Play strings -->
    <string name="time_left">Time Left:</string>
    <string name="elapsed_time">Elapsed Time:</string>
    <string name="question_num">Question:</string>
    <string name="default_question">0/0</string>
    <string name="question_text">Who is the person in this picture?</string>
    <string name="default_time">1:00</string>
    <string name="contentDesc_questionImage">Question Image</string>
    <string name="correct_text">Correct:</string>
    <string name="incorrect_text">Incorrect:</string>
    <string name="zero_count">0</string>
    <string name="option1">Person 1</string>
    <string name="option2">Person 2</string>
    <string name="option3">Person 3</string>
    <string name="option4">Person 4</string>
    <!-- Game Play strings -->
    
    <!--  Prompt strings -->
    <string name="prompt_message">Enter your name:</string>
    <!--  Prompt strings -->
    
    <!-- Post Game strings -->
    <string name="campaign_level">Level</string>
    <string name="time_taken">Time Taken:</string>
    <string name="timed_challenge_score">Score:</string>
    <string name="social_share">Share to Social Media</string>
    <string name="back_to_main">Return to Main Menu</string>
    <!-- Post Game strings -->
    
    <!-- Highscore strings -->
    <string name="global_highscores">Global Highscores</string>
    <string name="highscore_social">Social</string>
    <string name="highscore_general">General</string>
    <string name="highscore_999">999</string>
    <!-- Highscore strings -->
    
</resources>
