<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:facebook="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FFF"
    android:orientation="vertical"
    tools:context=".PostGameFragment" >

    <LinearLayout
        android:id="@+id/ll_postGame"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_margin="20dp"
        android:orientation="vertical"
        android:padding="5dp" >
        
        <!-- For displaying game mode -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1.4"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_gameMode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/timed_challenge"
                android:textSize="56sp"
                android:textStyle="bold|italic" />
            
        </LinearLayout>
        
       	<RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:layout_marginTop="20dp"
            android:gravity="center_vertical" >
			
           	<!-- Level text for Campaign Mode --> 
            <TextView
                android:id="@+id/tv_postGame_levelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/campaign_level"
                android:textSize="36sp"
                android:textStyle="bold"
                android:visibility="visible" />
            
            <!-- Text for time taken (Campaign Mode) -->
            <LinearLayout
                android:id="@+id/ll_postGame_timeTaken"
	            android:layout_width="400dp"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/tv_postGame_levelText"
	            android:layout_marginTop="40dp"
	            android:layout_centerHorizontal="true"
	            android:gravity="center"
	            android:orientation="horizontal"
	            android:visibility="visible"
	            tools:ignore="UselessParent" >
	            
                <View
		            android:layout_width="0dp"
		            android:layout_height="1dp"
		            android:layout_weight="0.2"
		            tools:ignore="NestedWeights" />
	            
	            <TextView
	                android:id="@+id/tv_postGame_timeTakenText"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="3"
	                android:text="@string/time_taken"
	                android:textSize="34sp"
	                android:textStyle="bold" />
	            
	            <View
		            android:layout_width="0dp"
		            android:layout_height="1dp"
		            android:layout_weight="0.5"
		            tools:ignore="NestedWeights" />
	
	            <TextView
	                android:id="@+id/tv_postGame_timeTaken"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1.4"
	                android:text="@string/default_time"
	                android:textSize="32sp" />
	            
	    	</LinearLayout>
	    	
            <!-- Text for questions answered correctly -->
            <LinearLayout
                android:id="@+id/ll_postGame_correct"
	            android:layout_width="400dp"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/ll_postGame_timeTaken"
	            android:layout_marginTop="10dp"
	            android:layout_centerHorizontal="true"
	            android:gravity="center"
	            android:orientation="horizontal"
	            tools:ignore="UselessParent" >
	            
                <View
		            android:layout_width="0dp"
		            android:layout_height="1dp"
		            android:layout_weight="0.2"
		            tools:ignore="NestedWeights" />
	            
	            <TextView
	                android:id="@+id/tv_postGame_correctText"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="3"
	                android:text="@string/correct_text"
	                android:textSize="34sp"
	                android:textStyle="bold" />
	            
	            <View
		            android:layout_width="0dp"
		            android:layout_height="1dp"
		            android:layout_weight="0.5"
		            tools:ignore="NestedWeights" />
	
	            <TextView
	                android:id="@+id/tv_postGame_correctNum"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1.4"
	                android:text="@string/zero_count"
	                android:textSize="32sp" />
	            
	    	</LinearLayout>
	    	
            <!-- Text for questions answered incorrectly -->
	    	<LinearLayout
                android:id="@+id/ll_postGame_incorrect"
	            android:layout_width="400dp"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/ll_postGame_correct"
	            android:layout_marginTop="10dp"
	            android:layout_centerHorizontal="true"
	            android:gravity="center"
	            android:orientation="horizontal"
	            tools:ignore="UselessParent" >
	            
                <View
		            android:layout_width="0dp"
		            android:layout_height="1dp"
		            android:layout_weight="0.2"
		            tools:ignore="NestedWeights" />
	            
	            <TextView
	                android:id="@+id/tv_postGame_incorrectText"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="3"
	                android:text="@string/incorrect_text"
	                android:textSize="34sp"
	                android:textStyle="bold" />
	            
	            <View
		            android:layout_width="0dp"
		            android:layout_height="1dp"
		            android:layout_weight="0.5"
		            tools:ignore="NestedWeights" />
	
	            <TextView
	                android:id="@+id/tv_postGame_incorrectNum"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1.4"
	                android:text="@string/zero_count"
	                android:textSize="32sp" />
	            
	    	</LinearLayout>
	    	
	    	<!-- Text for score (Timed Challenge) -->
            <LinearLayout
                android:id="@+id/ll_postGame_score"
	            android:layout_width="400dp"
	            android:layout_height="wrap_content"
	            android:layout_below="@id/ll_postGame_incorrect"
	            android:layout_marginTop="10dp"
	            android:layout_centerHorizontal="true"
	            android:gravity="center"
	            android:orientation="horizontal"
	            android:visibility="visible"
	            tools:ignore="UselessParent" >
	            
                <View
		            android:layout_width="0dp"
		            android:layout_height="1dp"
		            android:layout_weight="0.2"
		            tools:ignore="NestedWeights" />
	            
	            <TextView
	                android:id="@+id/tv_postGame_scoreText"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="3"
	                android:text="@string/timed_challenge_score"
	                android:textSize="34sp"
	                android:textStyle="bold" />
	            
	            <View
		            android:layout_width="0dp"
		            android:layout_height="1dp"
		            android:layout_weight="0.5"
		            tools:ignore="NestedWeights" />
	
	            <TextView
	                android:id="@+id/tv_postGame_score"
	                android:layout_width="0dp"
	                android:layout_height="wrap_content"
	                android:layout_weight="1.4"
	                android:text="@string/zero_count"
	                android:textSize="32sp" />
	            
	    	</LinearLayout>
            
        </RelativeLayout>

       	<!-- Stars gained for Campaign Mode -->
       	<!-- Also used to show whether it is a new highscore for Timed Challenge -->
        <ImageView
            android:id="@+id/iv_starsImage"
            android:layout_width="280dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:contentDescription="@string/contentDesc_questionImage"
            android:drawingCacheQuality="high"
            android:visibility="visible" />
	    
        <!-- Buttons for sharing to social media and returning to main menu -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:gravity="bottom|center_horizontal"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btn_socialShare"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:background="@drawable/btn_post_game"
                android:layout_margin="5dp"
                android:paddingBottom="10dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:text="@string/social_share"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                tools:ignore="ButtonStyle,NestedWeights" />
            
            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:layout_weight="0.1"
                tools:ignore="NestedWeights" />

            <Button
                android:id="@+id/btn_backToMainMenu"
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:layout_weight="1.5"
                android:background="@drawable/btn_post_game"
                android:layout_margin="5dp"
                android:paddingBottom="10dp"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:text="@string/back_to_main"
                android:textAllCaps="false"
                android:textSize="30sp"
                android:textStyle="bold|italic"
                tools:ignore="ButtonStyle,NestedWeights" />
        </LinearLayout>
        
    </LinearLayout>
</RelativeLayout>